rebase2 CHnage after

--- a/js/main.css
+++ b/js/main.css
@@ -23,3 +23,4 @@ matser change
           rebase_2 change 3 after rebase master
 
                             AND NOW A CHANGE ON THE BRANCH
+                            AND NOW ANOTHER CHANGE ON THE BRANCH APRÈS MASTER
